work/kubernetes/service/zipkin/v3.5.0/zipkin-ext.yaml
---
# Source: zipkin/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: zipkin
  namespace: "kongyu"
  labels:
    app.kubernetes.io/instance: zipkin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zipkin
    app.kubernetes.io/version: 3.5.0
    helm.sh/chart: zipkin-1.3.1
    app.kubernetes.io/component: zipkin
    app.kubernetes.io/part-of: zipkin
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: zipkin
      app.kubernetes.io/name: zipkin
      app.kubernetes.io/component: zipkin
      app.kubernetes.io/part-of: zipkin
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 9411
---
# Source: zipkin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: "kongyu"
  labels:
    app.kubernetes.io/instance: zipkin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zipkin
    app.kubernetes.io/version: 3.5.0
    helm.sh/chart: zipkin-1.3.1
    app.kubernetes.io/component: zipkin
    app.kubernetes.io/part-of: zipkin
spec:
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: "Cluster"
  ports:
    - name: http
      port: 9411
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/instance: zipkin
    app.kubernetes.io/name: zipkin
    app.kubernetes.io/component: zipkin
    app.kubernetes.io/part-of: zipkin
---
# Source: zipkin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: "kongyu"
  labels:
    app.kubernetes.io/instance: zipkin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zipkin
    app.kubernetes.io/version: 3.5.0
    helm.sh/chart: zipkin-1.3.1
    app.kubernetes.io/component: zipkin
    app.kubernetes.io/part-of: zipkin
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: zipkin
      app.kubernetes.io/name: zipkin
      app.kubernetes.io/component: zipkin
      app.kubernetes.io/part-of: zipkin
  template:
    metadata:
      annotations:
        checksum/config: 73a9ffa62ba065047a758788102506fd4b5cb27b0b42c220cdb61359274691af
      labels:
        app.kubernetes.io/instance: zipkin
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: zipkin
        app.kubernetes.io/version: 3.5.0
        helm.sh/chart: zipkin-1.3.1
        app.kubernetes.io/component: zipkin
        app.kubernetes.io/part-of: zipkin
    spec:
      serviceAccountName: zipkin
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: zipkin
                    app.kubernetes.io/name: zipkin
                    app.kubernetes.io/component: zipkin
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.service/zipkin
                    operator: In
                    values:
                      - "true"
              weight: 1
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: zipkin
          image: registry.lingo.local/bitnami/zipkin:3.5.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - /bin/bash
          args:
            - -ec
            - |
              # We need to load all the secret env vars to the system
              for file in $(find /bitnami/zipkin/secrets -type f); do
                  env_var_name="$(basename $file)"
                  echo "Exporting $env_var_name"
                  export $env_var_name="$(< $file)"
              done
              exec start-zipkin
          ports:
            - name: http
              containerPort: 9411
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /info
              port: http
              scheme: HTTP
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /health
              port: http
              scheme: HTTP
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: keystore-password
              mountPath: /bitnami/zipkin/secrets/keystore-password
            - name: database-password
              mountPath: /bitnami/zipkin/secrets/database
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: database-password
          secret:
            secretName: zipkin-externaldb
            items:
              - key: db-password
                path: CASSANDRA_PASSWORD
        - name: keystore-password
          secret:
            secretName: zipkin-tls-pass
            items:
              - key: keystore-password
                path: ARMERIA_SSL_KEY_STORE_PASSWORD
